linked 'privacy policy' text under email form.

--- a/html/index.html
+++ b/html/index.html
@@ -47,8 +47,13 @@
 					<div class="buttonBox">
 						<input type="submit" value="Subscribe" />
 					</div>
-					<div class="labelDiv"><label class="labelText">We care about your data in our <span>privacy
-								policy</span>.</label></div>
+					<div class="labelDiv"><label class="labelText">
+						We care about your data in our 
+						<span>
+							<a href="#">privacy policy.</a>
+						</span>
+					</label>
+					</div>
 				</form>
 			</div>
 		</div>
@@ -64,7 +69,7 @@
 				<div class="inputName"><input id="fullMail" type="email" placeholder="Please write your email" /></div>
 				<p class="labelP"><label>Would you recommend GeeksforGeeks to a friends?</label></p>
 				<div class="dropYes">
-					<input id="yes" type="radio" name="yes" value="check" />
+					<input id="yes" type="radio" name="yes" value="check" checked/>
 					<label for="yes">Yes</label>
 				</div>
 				<div class="dropYes">
@@ -90,7 +95,7 @@
 					<label for="Java">Java</label>
 				</div>
 				<div class="dropYes">
-					<input id="Python" type="checkbox" name="Python" value="Python" />
+					<input id="Python" type="checkbox" name="Python" value="Python" checked/>
 					<label for="Python">Python</label>
 				</div>
 				
