--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="description" content="We're still building. Subscribe for updates and 20% off when we launch. No spam, we promise!" />
 	<meta name="author" content="Alex Dularidze" />
-	<mata property="og:description" content="We're still building. Subscribe for updates and 20% off when we launch. No spam, we promise!" />
+	<meta property="og:description" content="We're still building. Subscribe for updates and 20% off when we launch. No spam, we promise!" />
 	<meta property="og:image" content="../icons/icon.svg" />
 	<meta property="og:title" content="Launch" />
 	<link rel="icon" href="../icons/icon.svg" />
@@ -14,7 +14,6 @@
 		Launch
 	</title>
 </head>
-
 <body>
 	<div class="fillerBox"></div>
 	<header>
